Basic sketch functionality added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <div id="container">
       <header id="header">Etch A Sketch</header>
-      <div class="sketchpad">
-        Sketchpad Here
+      <div id="sketchpad">
       </div>
       <div id="buttons">Buttons Here
       </div>
