Added the ability to change the number of pixels.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <header id="header">Etch A Sketch</header>
       <div id="sketchpad">
       </div>
-      <div id="buttons">Buttons Here
+      <div id="buttons">
+        <button class="button">Change Number of Pixels</button>
       </div>
     </div>
   </body>
