--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <body>
     <div id="container">
-      <header id="header">Etch A Sketch</header>
+      <header id="header"><img src="./images/logo.png"/></header>
       <div id="sketchpad">
       </div>
       <div id="buttons">
